<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:background="#AE4848"
            android:contentDescription="@string/app_name"
            android:scaleType="center" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/addNewProduct"
            android:textAllCaps="true"
            android:textColor="#323131"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/article_articleNameList"
            android:textColor="#5A5454" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/article_TextEdit"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/article_stockList"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/enterProd_btn"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="#A4AA0808"
                android:text="@string/enter_product2"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/deliverQty"
            android:textColor="#5A5454" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/qty_TextEdit"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/counted_qty_stockList"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/unit_TextEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginRight="80dp"
                android:layout_weight="1"
                android:text=" " />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#A4AA0808"
                android:text="@string/cancle"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/add_btn"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:background="#7580BC"
                android:onClick="callSearch"
                android:text="@string/add"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>