<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/dialog"
        android:layout_width="310dp"
        android:layout_height="192dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:background="#AE4848"
            android:contentDescription="@string/app_name"
            android:scaleType="center" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/set_article"
            android:textColor="#5A5454"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/articleEnter"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="14dp"
            android:hint="@string/name"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#A4AA0808"
                android:text="@string/cancle"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_ok"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:background="#7580BC"
                android:onClick="callSearch"
                android:text="@string/ok"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>