<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="protec.pl.protecabasvol2.MoveTakeArticle">


    <EditText
        android:id="@+id/article_textEdit"
        android:layout_width="121dp"
        android:layout_height="47dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="168dp"
        android:editable="false"
        android:ems="10"
        android:hint="@string/move_article"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="48dp"
        android:text="@string/move_to"
        android:textAllCaps="true"
        android:textColor="#1C1B1B"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/qty_textEdit"
        android:layout_width="124dp"
        android:layout_height="0dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:ems="10"
        android:hint="@string/qty"
        android:importantForAutofill="no"
        android:inputType="textPersonName|phone"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterArticle_btn" />

    <Button
        android:id="@+id/enterArticle_btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorProtec"
        android:onClick="enterFreehandArticle"
        android:singleLine="false"
        android:text="@string/enter_product2"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/articleLeaveQr_btn"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/article_textEdit"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/from_textEdit"
        android:layout_width="158dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="68dp"
        android:autofillHints=""
        android:editable="false"
        android:ems="10"
        android:hint="@string/from"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/qty_textEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterArticle_btn" />

    <Button
        android:id="@+id/leave_btn"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="76dp"
        android:background="@color/colorProtec"
        android:onClick="takeArticles"
        android:text="@string/move_to"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qty_textEdit"
        app:layout_constraintVertical_bias="0.371" />

    <Button
        android:id="@+id/articleLeaveQr_btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@color/colorBlue"
        android:onClick="checkStock"
        android:text="@string/qr_btn"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unit_textView"
        android:layout_width="44dp"
        android:layout_height="34dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/szt"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/qty_textEdit"
        app:layout_constraintTop_toBottomOf="@+id/enterArticle_btn" />

    <TextView
        android:id="@+id/artInfo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/article_articleNameList"
        app:layout_constraintBottom_toTopOf="@+id/article_textEdit"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/qtyInfo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:layout_marginBottom="16dp"
        android:text="@string/table_header_qty"
        app:layout_constraintBottom_toTopOf="@+id/qty_textEdit"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/lokInfo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/table_header_lager"
        app:layout_constraintBottom_toTopOf="@+id/from_textEdit"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="478dp"
        android:layout_height="203dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleX="-1.0"
        android:scaleY="-1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/gray" />


</androidx.constraintlayout.widget.ConstraintLayout>